--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@todo) do |f| %>
   <div class="field">
-    <%= f.text_field :title, placeholder: "What needs to be done?" %>
+    <%= f.text_field :title, placeholder: "What needs to be done? Confirm with Enter." %>
     <% if @todo.errors.any? %>
       <% @todo.errors.full_messages.each do |message| %>
         <small class="error"><%= message %></small>
