--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -8,8 +8,12 @@
 </ul>
 
 <div class="footer">
-  Todo: <span id="todo-count">1</span> •
-  Done: <span id="completed-count">0</span> •
-  Total: <span id="total-count">1</span> •
+  Todo: <span id="todo-count">1</span>
+  <span class="glyphicon glyphicon-exclamation-sign"></span>
+  Done: <span id="completed-count">0</span>
+  <span class="glyphicon glyphicon-ok-sign"></span>
+  Total: <span id="total-count">1</span>
+  <span class="glyphicon glyphicon-piggy-bank"></span>
   <a href="#" id="clean-up">Clean up</a>
+  <span class="glyphicon glyphicon-trash"></span>
 </div>
